--- a/auth/package.json
+++ b/auth/package.json
@@ -22,5 +22,13 @@
     "mongoose": "^6.5.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.6",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.3",
+    "mongodb-memory-server": "^8.8.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7"
   }
 }
