--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
