--- a/kubernetes/payments-depl.yaml
+++ b/kubernetes/payments-depl.yaml
@@ -23,6 +23,11 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+            - name: STRIPE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: stripe-secret
+                  key: STRIPE_KEY
             - name: NATS_CLUSTER_ID
               value: 'ticketing'
             - name: NATS_CLIENT_ID
