--- a/payments/package.json
+++ b/payments/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^6.5.0",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^10.15.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
