--- a/kubernetes/stripe-secret.yaml
+++ b/kubernetes/stripe-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: stripe-secret
 type: Opaque
 data:
-  JWT_KEY: sk_test_51LvNuxHco28exwbTmSFwU1Wi6oW6fQ3ORAUxZ5xYOWDG1ewz8ez2cMzw2DSoeP1dxGl7OorbBt4hvs7Hs97J74sm00fes81CXE
+  STRIPE_KEY: c2tfdGVzdF81MUx2TnV4SGNvMjhleHdiVG1TRndVMVdpNm9XNmZRM09SQVV4WjV4WU9XREcxZXd6OGV6MmNNencyRFNvZVAxZHhHbDdPb3JiQnQ0aHZzN0hzOTdKNzRzbTAwZmVzODFDWEU=
