--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -2,7 +2,9 @@ name: tests-payments
 
 # What's the action trigger
 on:
-  pull_request
+  pull_request:
+    paths:
+      - 'payments/**'
   
 # Actions we want to do when a PR is created, re-open or updated
 jobs:
